keep in gitrepo only nvim and my scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,6 @@
 # Specify filepatterns you want git to ignore.
-Microsoft/**
-Postman/**
-coc/**
-direnv/**
-discord/**
-evolution/**
-gcloud/**
-libreoffice/**
-nvim/plugged/**
-spotify/**
-google-chrome/**
-gnome-control-center/**
-menus/**
-pulse/**
-transmission/**
-teams/**
-sublime-merge/**
-Code/**
-vlc/**
-chromium/**
-oh-my-zsh/**
-tags
-monitors.xml
-BraveSoftware/**
-GIMP/**
+*
+!nvim/**
+!.gitignore
+!my_prompt.sh
+!.configure-env.sh
