--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 startup_session ~/.kitty_session
 
-font_family "MesloLGM"
+font_family "MesloLGS NF"
 font_size        14.0
 
 tab_bar_style powerline
